--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -114,7 +114,7 @@ $input-btn-padding-y: 0.375rem !default; // 36px
 $input-btn-padding-x-md: 1rem !default;
 $input-btn-padding-y-md: 0.25rem !default; // 32px
 $input-btn-padding-x-sm: 0.5rem !default;
-$input-btn-padding-y-sm: 0.125rem !default;
+$input-btn-padding-y-sm: 0.1875rem !default;
 $input-btn-padding-x-lg: 1rem !default;
 $input-btn-padding-y-lg: 0.656rem !default;
 
@@ -225,6 +225,11 @@ $input-height-xs: $input-btn-height-xs !default;
 $input-height-sm: $input-btn-height-sm !default;
 $input-height-md: $input-btn-height-md !default;
 $input-height-lg: $input-btn-height-lg !default;
+// input label height
+$input-label-height: 1.375rem !default;
+$input-label-height-sm: 1.25rem !default;
+$input-label-height-md: 1.375rem !default;
+$input-label-height-lg: 2.25rem !default;
 // others
 $input-focus-border-color: $primary !default;
 $input-btn-focus-box-shadow: none !default;
